# binsize

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  setup.cfg
src/binsize/: .gitignore  __init__.py  settings.py  settings_template.json  user_data.py  utils.py
src/binsize/cli/: binsize.py  build.py  commit.py  compare.py  get.py  history.py  tree.py
src/binsize/lib/: api.py  binary_size.py  build_definition_loader.py  common.py  data_handler.py  data_loader.py  map_file_analyzer.py  map_file_includer.py  row_handler_c.py  row_handler_common.py  row_handler_mpy.py  row_handler_rust.py  source_definition_cache.py
src/binsize/plugins/: size_tree.py  statistics.py
tests/: .gitignore  common.py  test_binary_size.py  test_build_definition_loader.py  test_data_handler.py  test_data_loader.py  test_map_file_includer.py  test_row_handler_c.py  test_row_handler_mpy.py  test_row_handler_rust.py  test_statistics_plugin.py  test_symbol_definition_cache.py
