[tool.poetry]
name = "binsize"
version = "0.1.3"
description = "Tool to analyze the size of a binary from .elf file"
license = "MIT"
authors = [
    "SatoshiLabs <info@satoshilabs.com>",
    "grdddj <jiri.musil06@seznam.cz>",
]
readme = "README.md"
repository = "https://github.com/grdddj/binsize"
keywords = ["binary size", "code size", ".elf file"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
typing-extensions = "*"
termcolor = "^2.0.1"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

# Exposing the `binsize` command to the user
[tool.poetry.scripts]
binsize = "binsize.cli.binsize:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
